@@ -9,10 +9,12 @@ import com.ivanzlotnikov.phone_book.phonebook.department.service.DepartmentServi
 import com.ivanzlotnikov.phone_book.phonebook.exception.EntityNotFoundException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -26,29 +28,9 @@ public class ContactService {
     private final DepartmentRepository departmentRepository;
     private final DepartmentService departmentService;
 
-    @Transactional
-    public void deleteAllById(List<Long> ids) {
-        if (ids == null || ids.isEmpty()) {
-            log.warn("Attempt to delete contacts with empty or null ID list");
-            return;
-        }
-        List<Long> existingIds = ids.stream()
-            .filter(contactRepository::existsById)
-            .toList();
-
-        if (existingIds.isEmpty()) {
-            log.info("No existing contacts found for deletion with IDs: {}", ids);
-            return;
-        }
-
-        contactRepository.deleteAllByIdIn(existingIds);
-        log.info("Successfully deleted {} contacts with IDs: {}", existingIds.size(), existingIds);
-
-    }
-
     @Transactional(readOnly = true)
     public List<ContactDTO> findAll() {
-        return contactRepository.findAll()
+        return contactRepository.findAllWithDepartment()
             .stream()
             .map(ContactDTO::fromEntity)
             .toList();
@@ -56,7 +38,7 @@ public class ContactService {
 
     @Transactional(readOnly = true)
     public Optional<ContactDTO> findById(long id) {
-        return contactRepository.findById(id)
+        return contactRepository.findByIdWithDepartmentAndPhones(id)
             .map(ContactDTO::fromEntity);
     }
 
@@ -64,37 +46,33 @@ public class ContactService {
         Contact contact;
 
         if (contactDTO.getId() != null) {
-            contact = contactRepository.findById(contactDTO.getId())
+            contact = contactRepository.findByIdWithDepartmentAndPhones(contactDTO.getId())
                 .orElseThrow(() -> new EntityNotFoundException(
                     "Contact not found with id: " + contactDTO.getId()));
         } else {
             contact = new Contact();
         }
-
         // Обновляем поля
         contact.setFullName(contactDTO.getFullName().trim());
         contact.setPosition(contactDTO.getPosition().trim());
 
+        Long newDepartmentId = contactDTO.getDepartmentId();
+        Long currentDepartmentId =
+            contact.getDepartment() != null ? contact.getDepartment().getId() : null;
+
         // Устанавливаем подразделение
-        if (contactDTO.getDepartmentId() != null) {
-            Department department = departmentRepository.findById(contactDTO.getDepartmentId())
-                .orElseThrow(() -> new EntityNotFoundException(
-                    "Department not found with id: " + contactDTO.getDepartmentId()));
-            contact.setDepartment(department);
-        } else {
-            contact.setDepartment(null);
+        if (!Objects.equals(newDepartmentId, currentDepartmentId)) {
+            if (newDepartmentId != null) {
+                Department department = departmentRepository.findById(contactDTO.getDepartmentId())
+                    .orElseThrow(() -> new EntityNotFoundException(
+                        "Department not found with id: " + contactDTO.getDepartmentId()));
+                contact.setDepartment(department);
+            } else {
+                contact.setDepartment(null);
+            }
         }
-
-        // Очищаем и обновляем телефоны
-        contact.getWorkPhones().clear();
-        contact.getWorkPhones().addAll(contactDTO.getWorkPhones());
-
-        contact.getWorkMobilePhones().clear();
-        contact.getWorkMobilePhones()
-            .addAll(contactDTO.getWorkMobilePhones());
-
-        contact.getPersonalPhones().clear();
-        contact.getPersonalPhones().addAll(contactDTO.getPersonalPhones());
+        //Обновляем телефоны только если изменилось
+        updatePhonesIfChanged(contact, contactDTO);
 
         Contact savedContact = contactRepository.save(contact);
         log.info("Contact saved: {} successfully", savedContact.getId());
@@ -102,36 +80,80 @@ public class ContactService {
         return ContactDTO.fromEntity(savedContact);
     }
 
-    public void deleteById(long id) {
-        if (!contactRepository.existsById(id)) {
-            throw new EntityNotFoundException("Contact not found with id: " + id);
+    private void updatePhonesIfChanged(Contact contact, ContactDTO contactDTO) {
+        List<String> newWorkPhones = filterEmptyPhones(contactDTO.getWorkPhones());
+        List<String> newWorkMobilePhones = filterEmptyPhones(contactDTO.getWorkMobilePhones());
+        List<String> newPersonalPhones = filterEmptyPhones(contactDTO.getPersonalPhones());
+
+        // Очищаем и обновляем телефоны
+        if (!newWorkPhones.equals(contact.getWorkPhones())) {
+            contact.getWorkPhones().clear();
+            contact.getWorkPhones().addAll(contactDTO.getWorkPhones());
         }
-        contactRepository.deleteById(id);
-        log.info("Contact deleted: {} successfully", id);
+
+        if (!newWorkMobilePhones.equals(contact.getWorkMobilePhones())) {
+            contact.getWorkMobilePhones().clear();
+            contact.getWorkMobilePhones().addAll(contactDTO.getWorkMobilePhones());
+        }
+
+        if (!newPersonalPhones.equals(contact.getPersonalPhones())) {
+            contact.getPersonalPhones().clear();
+            contact.getPersonalPhones().addAll(contactDTO.getPersonalPhones());
+        }
     }
 
-    @Transactional(readOnly = true)
-    public List<ContactDTO> searchByName(String name) {
-        return contactRepository.findByFullNameContainingIgnoreCase(
-                name.trim()).stream()
-            .map(ContactDTO::fromEntity)
-            .collect(Collectors.toList());
+    private List<String> filterEmptyPhones(List<String> phones) {
+        if (phones == null) {
+            return List.of();
+        }
+        return phones.stream()
+            .filter(phone -> phone != null && !phone.trim().isEmpty())
+            .map(String::trim)
+            .toList();
+    }
+
+    public void deleteById(long id) {
+        try {
+            contactRepository.deleteById(id);
+            log.info("Contact deleted: {} successfully", id);
+
+        } catch (EmptyResultDataAccessException e) {
+            throw new EntityNotFoundException("Contact not found with id: " + id);
+        }
+    }
+
+    public void deleteAllById(List<Long> ids) {
+        if (ids == null || ids.isEmpty()) {
+            log.warn("Attempt to delete contacts with empty or null ID list");
+            return;
+        }
+        int deletedCount = contactRepository.deleteAllByIdIn(ids);
+        log.info("Successfully deleted {} contacts with IDs: {}", deletedCount, ids);
     }
 
     @Transactional(readOnly = true)
     public List<ContactDTO> findByDepartmentHierarchy(Long departmentId) {
-        // 1. Найти целевой отдел
         Department department = departmentRepository.findById(departmentId)
             .orElseThrow(
-                () -> new EntityNotFoundException("Department not found with id: " + departmentId));
+                () -> new EntityNotFoundException(
+                    "Department not found with id: " + departmentId));
 
-        List<Department> allDepartments =new ArrayList<>(departmentService.getDepartmentsHierarchy(departmentId));
-
+        List<Department> allDepartments = new ArrayList<>(
+            departmentService.getDepartmentsHierarchy(departmentId));
         allDepartments.add(department);
 
-        return contactRepository.findByDepartmentIn(allDepartments).stream()
+        return contactRepository.findByDepartmentInWithDepartment(allDepartments)
+            .stream()
             .map(ContactDTO::fromEntity)
             .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<ContactDTO> searchByName(String name) {
+        return contactRepository.findByFullNameContainingIgnoreCaseWithDepartment(name.trim())
+            .stream()
+            .map(ContactDTO::fromEntity)
+            .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
